# stag-rs

./: Cargo.toml  README.md  repos.txt
src/: cl_args.rs  errors.rs  fs.rs  main.rs
src/model/: github.rs
