[package]
name = "stag"
version = "0.1.0"
edition = "2021"
authors = ["flxkbr"]
description = "A simple tool for fetching starmind repo tags"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.16", features = ["derive", "env"] }
octocrab = "0.16.0"
owo-colors = "3.4.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
